--- a/css/collect.css
+++ b/css/collect.css
@@ -1,22 +1,17 @@
-.bola-pequena {
-    left: 11rem;
-    top: 11rem;
-    width: 6rem;
-    height: 6rem;
-    background-color: var(--rosa-bola-menor);
+.little-circle {
+  left: 11rem;
+  top: 11rem;
+  width: 6rem;
+  height: 6rem;
+  background-color: var(--rosa-bola-menor);
 }
 
-.bola-grande {
-    top: 21rem;
-    left: 6rem;
-    background-color: var(--rosa-bola-maior);
-}
-
-ul .botoes.ativo {
-    background: var(--cinza-claro);
-    width: 2rem;
+.big-circle {
+  top: 21rem;
+  left: 6rem;
+  background-color: var(--rosa-bola-maior);
 }
 
 .btn {
-    background-color: var(--rosa);
+  background-color: var(--rosa);
 }
